--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "machine",
+  "name": "game-machine",
   "version": "0.0.1",
   "author": "Gaen",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "mocha -r ts-node/register test/**/*.ts"
+    "test": "mocha -r ts-node/register test/src/**/*.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.2.8",
+    "@types/lodash": "^4.14.149",
     "@types/mocha": "^7.0.1",
     "chai": "^4.2.0",
     "mocha": "^7.0.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
+  },
+  "dependencies": {
+    "ajv": "^6.11.0",
+    "lodash": "^4.17.15"
   }
 }
